# anuvad

./: .gitignore  Cargo.toml  README.md  Trunk.extension.toml  Trunk.toml  build_extension.sh  build_workers.sh  index.html  input.css  package-lock.json  package.json  tailwind.config.js
crates/anuvad-app/: Cargo.toml
crates/anuvad-app/src/: app.rs  lib.rs  main.rs  state.rs
crates/anuvad-app/src/components/: audio_recorder.rs  audio_source_selector.rs  header.rs  language_selector.rs  mod.rs  model_loader.rs  settings.rs  transcription.rs  translation.rs
crates/anuvad-app/src/workers/: audio_capture.rs  bridge.rs  mixed_capture.rs  mod.rs  model_cache.rs  tab_capture.rs
crates/anuvad-translator/: Cargo.toml
crates/anuvad-translator/src/: generate.rs  lib.rs  model.rs  prompt.rs
crates/anuvad-whisper/: Cargo.toml
crates/anuvad-whisper/src/: audio.rs  decoder.rs  languages.rs  lib.rs  streaming.rs
extension/: background.js  manifest.json
workers/: translator_worker.js  whisper_worker.js
