[workspace]
resolver = "2"
members = [
    "crates/anuvad-app",
    "crates/anuvad-whisper",
    "crates/anuvad-translator",
]

[workspace.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
log = "0.4"
console_log = "1"
console_error_panic_hook = "0.1"
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"
tokenizers = { version = "0.21", default-features = false, features = ["unstable_wasm"] }
byteorder = "1"
hf-hub = "0.3"
