[package]
name = "anuvad-app"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = { workspace = true }
log = { workspace = true }
console_log = { workspace = true }
console_error_panic_hook = { workspace = true }
web-sys = { workspace = true, features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlButtonElement",
    "HtmlSelectElement",
    "HtmlTextAreaElement",
    "Navigator",
    "MediaDevices",
    "MediaStream",
    "MediaStreamConstraints",
    "MediaStreamTrack",
    "AudioContext",
    "AudioContextOptions",
    "GainNode",
    "AnalyserNode",
    "ScriptProcessorNode",
    "AudioProcessingEvent",
    "AudioBuffer",
    "MediaStreamAudioSourceNode",
    "Worker",
    "WorkerOptions",
    "WorkerType",
    "MessageEvent",
    "ErrorEvent",
    "Blob",
    "BlobPropertyBag",
    "Url",
    "Cache",
    "CacheStorage",
    "Request",
    "RequestInit",
    "Response",
    "ResponseInit",
    "Headers",
    "ReadableStream",
    "ReadableStreamDefaultReader",
    "WritableStream",
    "StorageManager",
    "Clipboard",
    "KeyboardEvent",
    "HtmlInputElement",
    "Event",
    "EventTarget",
    "DomException",
    "BaseAudioContext",
    "AudioDestinationNode",
] }

[features]
default = []
extension = []

[lib]
crate-type = ["cdylib", "rlib"]
